# mock-social-api

./: LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
mock_social_api/: constants.py  main.py  utils.py
mock_social_api/api/v1/: api.py
mock_social_api/api/v1/endpoints/: instagram.py  tiktok.py
mock_social_api/schemas/: instagram.py  instagram_schema.py  response_schema.py
